samples/_failures_safe/1761545394_27e020_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac8a2869.c: In function ‘main’:
./samples/SAFE/__tmp_ac8a2869.c:151:29: error: missing terminating " character
  151 |             fprintf(stderr, "Comp
      |                             ^~~~~
./samples/SAFE/__tmp_ac8a2869.c:151:13: error: expected expression at end of input
  151 |             fprintf(stderr, "Comp
      |             ^~~~~~~
./samples/SAFE/__tmp_ac8a2869.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac8a2869.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac8a2869.c:151:13: error: expected declaration or statement at end of input
